src/test/deca/syntax/valid/classique/test-valid-7.deca
// Description:
//    Programme de tests sur class et extends
//
// Resultats:
//       Rien 
//
// Historique:
//    cree le 01/01/2025

class firstClass {
    int x;

    firstClass(int b){
        this.x = b;
    }

}

{
    firstClass b = new firstClass(3);
}